[package]
name = "rust-epd"
version = "0.1.0"
authors = ["the6p4c <me@doggirl.gay>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
cortex-m = "^0.7.2"
cortex-m-rt = "^0.6.14"
embedded-hal = "^0.2.5"
panic-halt = "^0.2.0"

[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt", "medium"]
version = "^0.7.0"
